# shshsh

./: LICENSE  README.md  pyproject.toml  test.py  test1.py
shshsh/: __init__.py  global_vars.py  pipe.py  quick.py  shell.py  streamer.py  utils.py
tests/: test_cwd.py  test_logic.py  test_parameter_parse.py  test_pipe.py  test_redirect.py  test_simple_cmd.py  test_zero.py
tests/case1/: multiple_line
