[tool.poetry]
name = "shshsh"
version = "0.1.0"
description = "bridge of python and shell"
authors = ["zqqqqz2000 <zqqqqz2000@sina.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
